# mrs_lib

./: .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.rst  CMakeLists.txt  Doxyfile  README.md  SHANDLER.md  \  annotated.html  annotated_dup.js  attitude__converter_8h.html  attitude__converter_8h.js  attitude__converter_8h__dep__incl.map  attitude__converter_8h__dep__incl.md5  attitude__converter_8h__incl.map  attitude__converter_8h__incl.md5  attitude__converter_8h_source.html  attributes_8hpp_source.html  batch__visualizer_8h.html  batch__visualizer_8h.js  batch__visualizer_8h__incl.map  batch__visualizer_8h__incl.md5  batch__visualizer_8h_source.html  citations.bib  citelist.html  classDynamicPublisher_1_1impl-members.html  classDynamicPublisher_1_1impl.html  classDynamicPublisher_1_1impl.js  classErrorPublisherTest-members.html  classErrorPublisherTest.html  classErrorPublisherTest.js  classErrorPublisherTest__coll__graph.map  classErrorPublisherTest__inherit__graph.md5  classErrorgraphTest-members.html  classErrorgraphTest.html  classErrorgraphTest__inherit__graph.map  classErrorgraphTest__inherit__graph.md5  classIntegrationTest-members.html  (+1596 more)
.ci/: ci_before_install.sh  ci_build.sh  ci_test.sh  deploy_key_github.enc  docs.sh  install.sh  test.sh
.github/workflows/: docs.yml  main.yml  melodic.yml  noetic.yml  ros_package_build.yml  rostest.yml
cfg/: batch_visualizer.cfg
config/: params_example.yaml
doxygen/: Doxyfile
examples/param_provider/: example.cpp
examples/subscriber_handler/: example.cpp  simple_example.cpp
include/impl/: SubscribeHandler_impl.h  dynamic_publisher.hpp  publisher_handler.hpp  service_client_handler.hpp  subscribe_handler.hpp  timer.hpp  transformer.hpp  ukf.hpp  vector_converter.hpp  vector_converter_types.h
include/mrs_lib/: ConvexPolygon.h  DynamicReconfigureMgr.h  GeometryUtils.h  GpsConversions.h  LKFRepredictor.h  LKFSystemModels.h  Lkf.h  MRS_odom_lkf.h  MedianFilter.h  Mutex.h  ParamLoader.h  Polygon.h  Profiler.h  Repredictor.h  SubscribeHandler.h  SubscribeHandler.tpp  Ukf.h  Utils.h  attitude_converter.h  batch_visualizer.h  dkf.h  dynamic_params.h  dynamic_publisher.h  dynamic_reconfigure_mgr.h  dynparam_mgr.h  geometry_utils.h  gps_conversions.h  icp.h  iir_filter.h  image_publisher.h  integration_test.h  jlkf.h  kalman_filter.h  kalman_filter_aloamgarm.h  lkf.h  lkf_legacy.h  lockable.h  math.h  median_filter.h  mrs_lib.h  (+34 more)
launch/: params_example.py
mrs_lib/: __init__.py  custom_config_path_sanitizer.py  custom_config_remappings.py  remappings_custom_config_parser.py
scripts/: optimize_covariance_ipdate.m
scripts/dkf/: constraint_transform.m  dkf.m  dkf_ukf.m  kf_correct.m  kf_predict.m  line_dist.m  line_meas.m  plane_dist.m  plane_meas.m  plane_surf.m  plane_velocity_meas.m  plot_meas.m  plot_meas_z.m  point_meas.m  test.m
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+92 more)
src/attitude_converter/: attitude_converter.cpp  attitude_converter_test.cpp
src/batch_visualizer/: batch_visualizer.cpp  batch_visualizer_demo.cpp  visual_object.cpp
src/convex_polygon/: convex_polygon.cpp
src/dkf/: dkf.cpp  example.cpp
src/dynamic_publisher/: dynamic_publisher.cpp  example.cpp
src/dynparam_mgr/: dynparam_mgr.cpp  dynparam_tests.cpp
src/errorgraph/: error_publisher.cpp  errorgraph.cpp
src/geometry/: conversions.cpp  cyclic.cpp  (+4 more)
test/: CMakeLists.txt  build_for_coverage.sh  build_tests.sh  compile_tests.sh  gdb_specific_test.sh  geometry_utils_test.cpp  geometry_utils_test.launch  mrs_lib.test  run_specific_test.sh  run_tests.sh
test/attitude_converter/: CMakeLists.txt  attitude_converter.test  test.cpp
test/batch_visualizer/: CMakeLists.txt  example.cpp  test.cpp
test/coro/: CMakeLists.txt  test.cpp
test/dkf/: CMakeLists.txt  test.cpp
test/dynparam_mgr/: CMakeLists.txt  test.cpp  test_config.yaml
test/error_publisher/: CMakeLists.txt  test.cpp
test/errorgraph/: CMakeLists.txt  test.cpp
test/geometry/: CMakeLists.txt  geometry.test  test.cpp
test/geometry_utils/: test.cpp
test/lkf/: CMakeLists.txt  test.cpp
test/lockable/: CMakeLists.txt  test.cpp
test/math/: CMakeLists.txt  math.test  probit_gts.h  test.cpp
test/median_filter/: CMakeLists.txt  median_filter.test  test.cpp
test/msg_extractor/: CMakeLists.txt  test.cpp
test/msg_extractor/log/: latest_list
test/mutex/: test.cpp
test/nckf/: CMakeLists.txt  test.cpp
test/param_loader/: CMakeLists.txt  param_loader.test  test.cpp  test.yaml  test_config.yaml  test_static.yaml
test/param_provider/: CMakeLists.txt  test.cpp  test_config.yaml  test_config2.yaml
test/profiler/: CMakeLists.txt  test.cpp
test/publisher_handler/: CMakeLists.txt  publisher_handler.test  test.cpp  test_in.cpp
test/repredictor/: CMakeLists.txt  repredictor.test  test.cpp
test/safety_zone/: CMakeLists.txt  test.cpp
test/scope_timer/: CMakeLists.txt  test.cpp
test/service_client_handler/: CMakeLists.txt  service_client_handler.test  test.cpp
test/service_server_handler/: CMakeLists.txt  test.cpp
test/subscribe_handler/: CMakeLists.txt  subscribe_handler.test  test.cpp
test/subscriber_handler/: CMakeLists.txt  test.cpp
test/timeout_manager/: CMakeLists.txt  test.cpp  timeout_manager.test
test/timer/: CMakeLists.txt  test.cpp  timer.test
test/timer_handler/: CMakeLists.txt  test.cpp
test/timeseries_interpolator/: CMakeLists.txt  test.cpp
test/transform_broadcaster/: CMakeLists.txt  test.cpp
test/transformer/: CMakeLists.txt  test.cpp  transformer.test
test/ukf/: test.cpp  ukf.test
test/utils/: CMakeLists.txt  test.cpp  utils.test
test/vector_converter/: test.cpp  vector_converter.test
(+129 files in other folders)
