<?xml version="1.0"?>
<package format="2">

  <name>mrs_lib</name>
  <version>1.0.4</version>
  <description>The MRS library</description>

  <author email="matous.vrba@fel.cvut.cz">Matous Vrba</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>mrs_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>visualization_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>interactive_markers</depend>

  <depend>libopencv-dev</depend>

  <test_depend>rostest</test_depend>

  <export>
  </export>

</package>
