<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>mrs_lib</name>
  <version>2.0.0</version>
  <description>MRS C++ libraries</description>
  <maintainer email="matous.vrba@fel.cvut.cz">Matous Vrba</maintainer>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>
  <maintainer email="afzalhmd14@gmail.com">Afzal Ahmad</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>launch_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>libopencv-dev</depend>
  <depend>libboost-dev</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
